# menu

./: .gitignore  README.md  gatsby-config.js  gatsby-readme.md  generate_recipe_json.sh  package-lock.json  package.json  recipes_bu_09-15-2024.json  recipes_bu_09_15_2024_1.json
menu-cli/: models.py  pyproject.toml
menu-cli/commands/: recipes.py
menu-cli/controllers/: recipes.py
menu-cli/input_data/: 20230113_01.json  20230115_01.json  20230117.json  20230130.json  20231229_01.json  more_20221229.json
menu-cli/tests/: test_data_output.json  test_utils.py
menu_cli/: create_menu_entries.py  main.py  models.py  pyproject.toml  remove_duplicate_recipes.py  utils.py
menu_cli/commands/: recipes.py
menu_cli/input_data/: 20230112_01.json  20230112_02.json  20230219.json  20240915.json  20250428.json  20250428_1.json  20250428_2.json  salads_20221226.json
menu_cli/tests/: test_recipe_controllers.py
src/components/: header.js  layout.css  layout.js  navigation.js
src/data/: recipes.json
src/pages/: 404.js  index.js  {recipesJson.category}.js
src/pages/{recipesJson.category}/: {recipesJson.title}.js
